# Elephant-Addons

./: Cargo.toml  README.md  catalog.json  package.json
.github/workflows/: addon-regressions.yml  apply-minimal-code-execution-fix.yml  apply-rust-only-code-execution.yml  bootstrap-elephant-addons.yml  cleanup-bootstrap.yml  javascript.yml  recover-sync-native-packages.yml  repair-sync-packages-pr.yml  retry-migrate.yml  trigger-bootstrap.yml
docs/: IMAGE_ASSET_MARKDOWN_CONTRACT.md
official/: README.md
official/ai/: inference.js
official/ai-chat/: agent.js  main.js  main.v2.js  manifest.json
official/code-execution/: main.js
official/dashboard/: main.js  manifest.json
official/google-keep-import/: main.js  manifest.json  sources.js  zip.js
official/open-models/: manifest.json
official/sites/: main.js  manifest.json  site-builder.js
official/sync/: manifest.json
official/wiki/: main.v2.js  manifest.json
packs/: base.enaddonpack  develop-parity.enaddonpack
tests/: ai-agent.test.mjs  ai-chat.test.mjs  ai-inference.test.mjs  sites-regression.mjs  sites-runtime.mjs
